<resources>

    <string name="dummy_button">Dummy Button</string>
    <string name="app_name">Briefn</string>
    <string name="app_share_name"><b>Briefn</b></string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">spriffy.user@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="default_notification_channel_id">channel</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="skip">SKIP</string>


    <string name="network_error">Network Error</string>
    <string name="internet_error_warning_message">Make sure that you have an active internet connection</string>
    <string name="msg_no_internet_connection">No internet connection!</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Trusted News</string>
    <string name="slide_1_desc">Today or any day that phone may ring and bring good news.</string>

    <string name="slide_2_title">News For you</string>
    <string name="slide_2_desc">We relish news of our heroes, forgetting that we are extraordinary to somebody too.</string>

    <string name="slide_3_title">No Fake News </string>
    <string name="slide_3_desc">When fake news is repeated, it becomes difficult for the public to discern what is real.</string>

    <string name="slide_4_title">Add Free</string>
    <string name="slide_4_desc">It is amazing that the amount of news that happens in the world every day always just exactly fits the newspaper.
</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="hint_location">Select Your location</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>


    <string name="err_msg_mobile">Please Enter Your Mobile No.</string>
    <string name="err_msg_otp">Please Enter a Valid Otp</string>
    <string name="err_msg_mobile_length">Please Enter Your Mobile No.of 10 Digits.</string>
    <string name="err_msg_pass">Please Enter Your Password.</string>
    <string name="recharge">Recharge</string>
    <string name="enter_wallet_amount">Enter Wallet Amount</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="my_wallet_amount">My Wallet Amount</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="search_hint">Search here</string>
    <string name="no_data_found">No Data Found..</string>
    <string name="service_id">SERVICE ID :</string>
    <string name="update_vehicle_image">---- Vehicle Images ----</string>
    <string name="update_vehicle_info">---- Vehicle Information ----</string>
    <string name="vehicle_front_image">Vehicle Front Image</string>
    <string name="vehicle_back_image">Vehicle Back Image</string>
    <string name="vehicle_side_image_1">Vehicle Side Image 1</string>
    <string name="optional_image_1">Optional Image 1</string>
    <string name="optional_image_2">Optional Image 2</string>
    <string name="address">Briefn.in (Digital Business) 304/82 Indra Puri Colony New Bairahana Prayagraj Pin code : 211003 Uttar Pradesh</string>
    <string name="status">Status</string>
    <string name="Amount">Amount</string>
    <string name="title_activity_invoice">FullscreenActivity</string>
    <string name="user_info">User Info</string>
    <string name="basic_details">Basic Details</string>
    <string name="edit">Edit</string>
    <string name="shop_name">Shop Name</string>
    <string name="view">View</string>
    <string name="accept">Accept</string>
    <string name="name">Name :</string>
    <string name="address_">Address :</string>
    <string name="verify">Verify</string>
    <string name="car_model">Car Model</string>
    <string name="rupee">\u20b9</string>
    <string name="registeration_number_ab12xy1234">Registeration Number (AB12XY1234)</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="balance">Balance :</string>
    <string name="message">Message :</string>
    <string name="reject">Reject</string>
    <string name="tagline">Your Morning Updates.</string>
    <string name="enter_the_verification_code">Please enter the OTP below to complete the verification process</string>
    <string name="resend_code">Resend Code</string>
    <string name="login_or_sign_up">Login or Signup</string>
    <string name="currency">₹</string>
    <string name="db">DB</string>
    <string name="title_activity_d_b_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="location_api_key_id">AIzaSyCfKKl5LsMfeU2M7-lqCf2qWoNC0rYpilg</string>
    <!--live-->
<!--    <string name="razor_api_key">rzp_live_WFDy4MdlBhWbkd</string>-->
    <!--test-->
    <string name="razor_api_key">rzp_test_LOXX1hSpG4g3eh</string>

    <string name="noitem_incart">Your cart is empty</string>
    <string name="noitem_incart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
    <string name="shop_now">Shop Now</string>

    <!--order status-->
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="pending">pending</string>
    <string name="all">All</string>
    <string name="accepted">Accepted</string>
    <string name="delivered">Delivered</string>
    <string name="completed">Completed</string>
    <string name="rejected">Rejected</string>
    <string name="founder_of_briefnn">Founder of Briefn</string>
    <string name="name_of_founder">Udayan</string>
    <string name="media_reporter">Media</string>
    <string name="Dev">Himanshu</string>
    <string name="first_name">First Name</string>
    <string name="fathers_name">Fathers Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="e_mail">E-Mail</string>
    <string name="address_1">Address</string>
    <string name="forget_password">Forget Password</string>
    <string name="user_name">Sunny Shah</string>
    <string name="news_today">According to the Central Pollution Control Board(CPCB) mobile app, SAMEER, the city s air quality index (AQI) was recorded at 401.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="virification_code_text">Enter the verification code we just sent you on your mobile number</string>
    <string name="title_activity_profile">Profile</string>
    <string name="youtube_api_key">AIzaSyB3mE05Q-5P4qO-1vMZVTzTw_oGDk_AUb0</string>
    <string name="select_language">Select Language</string>
    <string name="menu_gallery">Gallery</string>
    <string name="next">NEXT</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="about_us">About Us</string>
    <string name="live_chat">Live Chat</string>
    <string name="my_account">My Account</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="don_t_worry_your_number_will_not_be_shared_with_anyone">Don\'t worry your number will not be shared with anyone</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="subscription_plan">Subscription plan</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="related_news">Related News</string>
    <string name="top_news">Top News</string>
    <string name="registered_office">Registered Office</string>
    <string name="business_office">Business Office</string>
    <string name="_34_balaji_nagar_bhopal_madhya_pradesh">34 Balaji Nagar, Bhopal Madhya Pradesh</string>
    <string name="email_address">Email Address</string>
    <string name="shuklabriefx_in_gmail_com">Shuklabriefx.in@gmail.com</string>
    <string name="video">Video</string>
    <string name="search">SEARCH</string>
    <string name="account_info">Account Info</string>
    <string name="name1">Name</string>
    <string name="mobile1">Mobile</string>
    <string name="email1">Email</string>
    <string name="address1">Address</string>
    <string name="subscription_plan1">Subscription Plan</string>
    <string name="valid_till">Valid till</string>
    <string name="plan_name">Plan Name</string>
    <string name="see_more">See more..</string>
<!--    <string name="appsharing">To get information about country, world and jobs download an application</string>-->
    <string name="appsharing">Get the first information of every government and private jobs in your city. Along with
        the dose of every knowledgeful news of the country and abroad, download it now</string>

</resources>