<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/selectLanguage"
            android:icon="@drawable/language"
            android:title="@string/select_language"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:visible="false"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:visible="false"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_myOrders"
            android:icon="@drawable/ic_myorders"
            android:visible="false"
            android:title="My Orders" />

        <item
            android:id="@+id/nav_MyBasket"
            android:icon="@drawable/ic_shopping_cart"
           android:visible="false"
            android:title="My Basket" />

        <item
            android:id="@+id/nav_MyAccount"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_account" />

        <item
            android:id="@+id/share_app"
            android:title="@string/share_app"
            android:icon="@drawable/ic_share"/>


        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us"
            android:icon="@drawable/ic_phone_call"/>


        <item
            android:id="@+id/about_us"
            android:title="@string/about_us"
            android:icon="@drawable/ic_question"/>

        <!--        created by deepika-->
        <item
            android:id="@+id/live_chat"
            android:title="@string/live_chat"
            android:visible="false"
            android:icon="@drawable/ic_chat__l"/>



        <item
            android:id="@+id/terms"
            android:title="@string/terms_amp_condition"
            android:icon="@drawable/ic_terms_and_conditions"/>

        <item
            android:id="@+id/privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_insurance" />

        <item
            android:id="@+id/refund_policy"
            android:title="Refund Policy"
            android:visible="false"
            android:icon="@drawable/ic_terms_and_conditions"/>




        <item
            android:id="@+id/faq"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faq"/>


        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/logout" />

    </group>
</menu>